run on ubuntu18.04 in time, using realsense

--- a/InfiniTAM/Apps/CMakeLists.txt
+++ b/InfiniTAM/Apps/CMakeLists.txt
@@ -2,6 +2,8 @@
 # CMakeLists.txt for Apps #
 ###########################
 
+add_compile_options(-std=c++11)
+
 add_subdirectory(InfiniTAM)
 add_subdirectory(InfiniTAM_cli)
 
